don't need to fix pointer styling in an override now that we're not breaking it
Since <a> tag has an href now, bootstrap doesn't try to style it so it doesn't look like a link in the first place.

--- a/app/assets/stylesheets/local/playlist.scss
+++ b/app/assets/stylesheets/local/playlist.scss
@@ -59,14 +59,9 @@
         i.fa-download {
           display:none;
         }
-        cursor: pointer;
         font-family: $brand-sans-serif;
-        color: $brand-blue;
         white-space: nowrap;
         padding-right: 0.3125rem;
-      }
-      .download-link:hover {
-        text-decoration: underline;
       }
     }
     &.currently-selected {
